wtx-macros-tests/tests/fail/absent_field_in_unnamed_struct.stderr
error: Unnamed structures must have a `#[pkg::field]` attribute on each field.
 --> tests/fail/absent_field_in_unnamed_struct.rs:7:10
  |
7 |   struct Req(
  |          ^^^

error: aborting due to 1 previous error

